Update IR proximity sensor.html

--- a/IR proximity sensor/IR proximity sensor.html
+++ b/IR proximity sensor/IR proximity sensor.html
@@ -14,8 +14,8 @@
 </tr>
 </tbody>
 </table>
-<p style="font-size: 16px;">In a Proximity Sensor, an IR LED and a Photodiode are used to detect&nbsp;obstacles. The IR LED transmits light in forward direction. When an&nbsp;obstacle is ahead, the light reflects and the photodiode is activated. By&nbsp;this method, an obstacle is detected. Finally, the sensor measures the distance of&nbsp;the object and returns a value (e.g. cm).</p>
-<p style="font-size: 16px;">Check in this <a href="https://www.youtube.com/watch?v=f6vTo79PZUw">video</a> how to use an IR proximity sensor.&nbsp;</p>
+<p style="font-size: 16px; text-align: justify;">In a Proximity Sensor, an IR LED and a Photodiode are used to detect&nbsp;obstacles. The IR LED transmits light in forward direction. When an&nbsp;obstacle is ahead, the light reflects and the photodiode is activated. By&nbsp;this method, an obstacle is detected. Finally, the sensor measures the distance of&nbsp;the object and returns a value (e.g. cm).</p>
+<p style="font-size: 16px; text-align: justify;">Check in this <a href="https://www.youtube.com/watch?v=f6vTo79PZUw">video</a> how to use an IR proximity sensor.&nbsp;</p>
 </td>
 </tr>
 </tbody>
