--- a/LED/LED.html
+++ b/LED/LED.html
@@ -1,18 +1,18 @@
-<h1><span style="color: #000000;">LEDs (output)</span></h1>
-<table style="height: 377px; width: 825px;">
+<h1><span style="color: #000000;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
+<h1>LED (Light Emitting Diode)</h1>
+<table style="height: 273px; width: 834px;">
 <tbody>
-<tr>
-<td style="width: 11.1836px;">
+<tr style="height: 283.047px;">
+<td style="width: 311.016px; height: 283.047px;">&nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/LED/LED.jpg?raw=true" alt="" width="299" height="105" /></td>
+<td style="width: 511.016px; height: 283.047px;">
+<h3 style="font-size: 16px; text-align: center;">LED is a semiconductor light source.</h3>
 <p>&nbsp;</p>
-<p>&nbsp;</p>
-<p>&nbsp;</p>
-</td>
-<td style="width: 800.816px;">
-<h3 style="text-align: justify;">Light-emitting diode (LED) is a semiconductor light source. This means that if connected&nbsp;correctly (suitable voltage) to an energy source (battery) it will turn on.</h3>
-<h3 style="text-align: justify;">They come in colour&nbsp;and consume very low energy.</h3>
-<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<img src="http://gdurl.com/4hBl" alt="" width="264" height="93" />&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<img src="http://gdurl.com/sSsS " alt="" width="164" height="171" /></p>
+<p style="font-size: 16px; text-align: justify;">This means that if connected correctly (suitable voltage) to an energy source (battery), it will turn on.</p>
+<p style="font-size: 16px; text-align: justify;">They come in colour and consume very low energy.</p>
+<p style="font-size: 15px;">Check in this <a href="https://www.youtube.com/watch?v=Iwv5momDiKQ">video</a> how a LED works.</p>
 </td>
 </tr>
 </tbody>
 </table>
-<p>&nbsp;</p>
+<p><a href="https://github.com/ecraft2learn/OER/raw/master/LED/LEDs.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.&nbsp;</p>
+<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp; &nbsp; &nbsp;<img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_CC.png" alt="" width="153" height="54" /></p>
