--- a/magnetic switch/magnetic switch.html
+++ b/magnetic switch/magnetic switch.html
@@ -1,12 +1,15 @@
+<h1><span style="color: #000000;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
 <h1>Magnetic switch</h1>
-<table style="height: 377px; width: 825px;">
+<table style="height: 132px; width: 828px;">
 <tbody>
 <tr>
-<td style="width: 310.422px;"><img src="https://github.com/ecraft2learn/OER/blob/master/magnetic%20switch/magnetic-door-switch-set.jpg?raw=true" alt="" width="227" height="227" /></td>
-<td style="width: 502.578px;">
-<h3 style="text-align: justify;">An electrical switch that reacts when a magnetic field affects it. You can easily apply it&nbsp;in a door, a window or a drawer to detect if the door is open or closed.</h3>
-<h3>How easy is to make an <a href="https://www.youtube.com/watch?v=oum4zNXg7zs">Arduino Reed Switch (magnet sensor) with LED</a>!</h3>
+<td style="width: 311.016px;">&nbsp; &nbsp; &nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/magnetic%20switch/Reed_Magnetic_Switch.png?raw=true" alt="" width="246" height="178" /></td>
+<td style="width: 504.766px;">
+<p style="text-align: justify; font-size: 16px;">An electrical switch that reacts when a magnetic field affects it. You can easily apply it&nbsp;in a door, a window or a drawer to detect if the door is open or closed.</p>
+<p style="text-align: justify; font-size: 16px;">How easy is to make an <a href="https://www.youtube.com/watch?v=oum4zNXg7zs">Arduino Reed Switch (magnet sensor) with LED</a>!</p>
 </td>
 </tr>
 </tbody>
 </table>
+<p><a href="https://github.com/ecraft2learn/OER/raw/master/magnetic%20switch/Magnetic%20switch.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.&nbsp;</p>
+<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp; &nbsp; &nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/Logos/Logo_PD.png?raw=true" alt="" width="50" height="50" /></p>
