--- a/piezo sensor/piezo sensor.html
+++ b/piezo sensor/piezo sensor.html
@@ -1,14 +1,25 @@
-<h1>Piezoelectric sensor</h1>
-<table style="height: 377px; width: 825px;">
+<h1><span style="color: #000000;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
+<h1>Piezo sensor</h1>
+<table style="height: 189px; width: 839px;">
 <tbody>
 <tr>
-<td style="width: 23.1953px;">&nbsp;&nbsp;&nbsp;</td>
-<td style="width: 788.805px;">
-<h3 style="text-align: justify;">A device that uses the&nbsp;piezoelectric effect to measure changes&nbsp;in&nbsp;pressure,&nbsp;acceleration,&nbsp;temperature,&nbsp;strain, or&nbsp;force&nbsp;by converting them to electricity&nbsp;(voltage).</h3>
-<h3 style="text-align: justify;">The prefix&nbsp;piezo-&nbsp;is Greek for "press" or "squeeze".</h3>
-<h3 style="text-align: justify;">If you want to investigate more about piezo mechanisms for motion control, check out this <a href="https://www.youtube.com/watch?v=fHp95e-CwWQ&amp;t=6s" target="_blank" rel="noopener">video</a>!&nbsp;</h3>
-<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/piezo%20sensor/SchemaPiezo.gif" alt="" width="256" height="256" />&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/piezo%20sensor/piezo%20sensor.jpg" alt="" width="285" height="207" /></p>
+<td style="width: 253.516px;">&nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/piezo%20sensor/piezo%20sensor.gif?raw=true" alt="" width="256" height="256" /></td>
+<td style="width: 573.516px;">
+<table style="height: 71px; margin-left: auto; margin-right: auto;" width="501">
+<tbody>
+<tr>
+<td style="width: 493.516px;">
+<h3 style="text-align: center; border: 1px solid black;">A device that uses the piezoelectric effect to measure changes in pressure, acceleration, temperature or force by converting them to electricity (voltage).</h3>
 </td>
 </tr>
 </tbody>
 </table>
+<p style="font-size: 16px;">The prefix piezo-is Greek for "press" or "squeeze".</p>
+<p style="font-size: 16px;">If you want to investigate more about piezo mechanisms for motion control, check out this <a href="https://www.youtube.com/watch?v=fHp95e-CwWQ&amp;amp;t=6s&quot;%20target=&quot;_blank&quot; rel=&quot;noopener">video</a>.</p>
+<p>&nbsp;</p>
+</td>
+</tr>
+</tbody>
+</table>
+<p><a href="https://github.com/ecraft2learn/OER/raw/master/piezo%20sensor/Piezoelectric%20sensor.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.&nbsp;</p>
+<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp; &nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/Logos/Logo_CC.png?raw=true" alt="" width="125" height="44" /></p>
