--- a/potentionmeter sensor/potentiometer.html
+++ b/potentionmeter sensor/potentiometer.html
@@ -1,18 +1,24 @@
+<h1><span style="color: #000000;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
 <h1>Potentiometer</h1>
-<table style="height: 377px; width: 825px;">
+<table style="height: 86px; width: 847px;">
 <tbody>
 <tr>
-<td style="width: 327.574px;">
-<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/potentionmeter%20sensor/Potentiometer2.jpg" alt="" width="220" height="258" />&nbsp; &nbsp;&nbsp;</p>
-<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/potentionmeter%20sensor/potentiometer.jpg" alt="" width="287" height="215" /> &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</p>
-</td>
-<td style="width: 483.426px;">
-<h3 style="text-align: justify;">A manually adjustable, variable resistor with three terminals. Two terminals are&nbsp;connected to a resistive element, the third terminal is connected to an adjustable&nbsp;wiper. The position of the wiper determines the output voltage.</h3>
-<h3 style="text-align: justify;">In sum, a sliding or rotating contact that create a resistance change that we can read&nbsp;into the Arduino board as an analog value.&nbsp;For instance, you can connect three wires&nbsp;to the Arduino board. The first goes to ground from one of the outer pins of the&nbsp;potentiometer. The second goes from 5 volts to the other outer pin of the&nbsp;potentiometer. The third goes from analog input 2 to the middle pin of the&nbsp;potentiometer.</h3>
-<h3 style="text-align: justify;">By turning the shaft of the potentiometer, we change the amount of resistence on&nbsp;either side of the wiper which is connected to the center pin of the potentiometer.&nbsp;This changes the relative "closeness" of that pin to 5 volts and ground, giving us a&nbsp;different analog input. When the shaft is turned all the way in one direction, there are&nbsp;0 volts going to the pin, and we read 0. When the shaft is turned all the way in the&nbsp;other direction, there are 5 volts going to the pin and we read 1023.</h3>
-<h3 style="text-align: justify;">In between,&nbsp;analogRead() returns a number between 0 and 1023 that is proportional to the&nbsp;amount of voltage being applied to the pin.</h3>
-<h3 style="text-align: justify;">In this short <a href="https://www.youtube.com/watch?v=AbB2-4zBEgA" target="_blank" rel="noopener">video</a>, you can see how the potentiometer senses the progressive difference in the current, by sending faster LED blinks.</h3>
+<td style="width: 289.68px;">&nbsp; &nbsp; &nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/potentionmeter%20sensor/Potentiometer.jpg?raw=true" alt="" width="240" height="240" /></td>
+<td style="width: 545.32px;">
+<p style="text-align: justify; font-size: 16px;">A manually adjustable, variable resistor with three terminals. Two terminals are&nbsp;connected to a resistive element, the third terminal is connected to an adjustable&nbsp;wiper.</p>
+<table style="height: 18px;" width="574">
+<tbody>
+<tr>
+<td style="width: 567.266px;">
+<h3 style="text-align: center; border: 1px solid black;">The position of the wiper determines the output voltage.</h3>
 </td>
 </tr>
 </tbody>
 </table>
+<p style="text-align: justify; font-size: 16px;">In this <a href="https://www.youtube.com/watch?v=XR8ede6V6eA" target="_blank" rel="noopener">video</a> you learn how to use it and add to your circuit.&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</p>
+</td>
+</tr>
+</tbody>
+</table>
+<p><a href="https://github.com/ecraft2learn/OER/raw/master/potentionmeter%20sensor/Potentiometer.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.&nbsp;</p>
+<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp;<a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license"><img style="border-width: 0;" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" alt="Licen&ccedil;a Creative Commons" width="130" height="46" /></a><br /><br /></p>
