--- a/pressure sensor/pressure sensor.html
+++ b/pressure sensor/pressure sensor.html
@@ -1,16 +1,15 @@
+<h1><span style="color: #000000;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
 <h1>Pressure sensor</h1>
-<table style="height: 377px; width: 779.102px;">
+<table style="height: 86px; width: 845px;">
 <tbody>
 <tr>
-<td style="width: 10px;">
-<p>&nbsp; &nbsp;&nbsp;</p>
-<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
-</td>
-<td style="width: 755.102px;">
-<h3 style="text-align: justify;">A device that senses pressure and converts it into an electric signal/value where the&nbsp;amount depends upon the pressure applied, like showed in tthis <a href="https://www.youtube.com/watch?v=LcGBfYhjkkE" target="_blank" rel="noopener">video</a>.</h3>
-<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/pressure%20sensor/pressure%20sensor.jpg" alt="" width="205" height="205" /></p>
-<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</p>
+<td style="width: 207.359px;"><img src="https://github.com/ecraft2learn/OER/blob/master/pressure%20sensor/pressure%20sensor.jpg?raw=true" alt="" width="200" height="200" /></td>
+<td style="width: 623.641px;">
+<h3 style="font-size: 16px; border: 1px solid black; text-align: center;">A device that senses pressure and converts it into an electric signal/value where the amount depends upon the pressure applied.&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</h3>
+<p style= "font-size: 16px">In this <a href="https://www.youtube.com/watch?v=wvJvYTQQDM0" target="_blank" rel="noopener">video</a>, you see one of many applications of pressure senors.&nbsp;</p>
 </td>
 </tr>
 </tbody>
 </table>
+<p><a href="https://github.com/ecraft2learn/OER/raw/master/pressure%20sensor/pressure%20sensor.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.&nbsp;</p>
+<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp;<a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license"><img style="border-width: 0;" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" alt="Licen&ccedil;a Creative Commons" width="130" height="46" /></a><br /><br /></p>
