--- a/resistor/resistors.html
+++ b/resistor/resistors.html
@@ -1,17 +1,26 @@
+<h1><span style="color: #000000;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
 <h1>Resistors</h1>
-<table style="height: 377px; width: 811.387px;">
+<table style="height: 221px; width: 845px;">
 <tbody>
 <tr>
-<td style="width: 301px;">
-<p>&nbsp;<img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/resistor/resistor.jpg" alt="" width="244" height="325" /></p>
-<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;</p>
+<td style="width: 307.266px;">
+<p style="text-align: center;"><img src="https://github.com/ecraft2learn/OER/blob/master/resistor/Resistors.jpg?raw=true" alt="" width="236" height="236" />&nbsp; &nbsp;</p>
 </td>
-<td style="width: 497.387px;">
-<h3 style="text-align: justify;">Common electronic component to limit the current in a circuit.</h3>
-<h3 style="text-align: justify;">The coloured stripes indicate&nbsp;the resistor value: the bigger the value, the more resistance resulting in decreased current&nbsp;flow.</h3>
-<h3 style="text-align: justify;">Everything you need to know about resistors, you can discover right in this <a href="https://www.youtube.com/watch?v=KWIZcuff74I" target="_blank" rel="noopener">video</a>.</h3>
-<p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</p>
+<td style="width: 526.016px;">
+<table style="height: 78px;" width="513">
+<tbody>
+<tr style="height: 38.832px;">
+<td style="width: 506.016px; height: 38.832px;">
+<h3 style="text-align: center; border: 1px solid black;">Electronic component to limit the current in a circuit.</h3>
 </td>
 </tr>
 </tbody>
 </table>
+<p style="text-align: justify; font-size: 16px;">The colored stripes indicate&nbsp;the resistor value: the bigger the value, the more resistance, resulting in decreased current&nbsp;flow.</p>
+<p style="text-align: justify; font-size: 16px;">In this <a href="https://www.youtube.com/watch?v=Gc1wVdbVI0E" target="_blank" rel="noopener">video</a>, you learn everything you need to know about resistors.</p>
+</td>
+</tr>
+</tbody>
+</table>
+<p><a href="https://github.com/ecraft2learn/OER/raw/master/resistor/Resistors.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.&nbsp;</p>
+<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp;<a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license"><img style="border-width: 0;" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" alt="Licen&ccedil;a Creative Commons" width="130" height="46" /></a><br /><br /></p>
