--- a/sensors/sensors.html
+++ b/sensors/sensors.html
@@ -1,26 +1,16 @@
-<h1>Sensors</h1>
-<h3 style="text-align: justify;">An input device, module, or subsystem whose purpose is to detect events or changes&nbsp;in its environment and send the information to other electronics, frequently&nbsp;a&nbsp;computer processor. It makes a translation between the physical world to&nbsp;microcontrollers. A sensor is always used with other electronics, whether as simple as&nbsp;a light or as complex as a computer.&nbsp;</h3>
-<h3 style="text-align: justify;">There are digital or analogue sensors.&nbsp;The distinction between Analog and Digital is important when you are deciding which type of sensor you wish to use. Part of this decision depends on the type of resources&nbsp;available on your project.</h3>
-<table style="height: 377px; width: 810px;">
+<h1><span style="color: #000000;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
+<h1>Sensor</h1>
+<p style="text-align: justify; font-size: 16px;">An input device whose purpose is to detect events or changes&nbsp;in its environment and send the information to other electronics, frequently&nbsp;a&nbsp;computer processor.&nbsp;</p>
+<p style="text-align: justify; font-size: 16px;">There are digital or analogue sensors.</p>
+<table style="height: 136px;" width="816">
 <tbody>
 <tr>
-<td style="width: 252.57px;">
-<p>&nbsp;</p>
-<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/sensors/sound%20sensor.JPG" alt="" width="300" height="300" /></p>
-</td>
-<td style="width: 544.43px;">
-<h3 style="text-align: justify;">Analog sensors capture analog signals that can assume any value in a range. An&nbsp;interesting way to think about this is that an Analog Signal works like a tuner on an&nbsp;older radio. You can turn it up or down in a continuous motion. You can fine tune it by&nbsp;turning the knob ever so slightly.</h3>
-<h3 style="text-align: justify;">In order to successfully use an Analog sensor, you&nbsp;need some way to convert the data into a digital form.&nbsp;For example: this sound sensor&nbsp;is used to sense sound level, i.e., it&nbsp;translates the amplitude of the acoustic volume of&nbsp;the sound into an electrical voltage for sensing sound level. This process requires some&nbsp;circuitry, and utilizes&nbsp;microcontroller&nbsp;along with a microphone for creating&nbsp; an analog&nbsp;output signal.</h3>
-</td>
-</tr>
-<tr>
-<td style="width: 252.57px;">
-<p>&nbsp; &nbsp; &nbsp; &nbsp;<img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/sensors/push%20buttom.jpg" alt="" width="225" height="225" /></p>
-</td>
-<td style="width: 544.43px;">
-<h3 style="text-align: justify;">Digital sensors generate what is called a "Discrete Signal". This means that there is a&nbsp;range of values that the sensor can output, but the value must increase in steps. For example, consider a push button switch. This is one of the simplest forms of&nbsp;sensors. It has two discrete values. It is on, or it is off. Other "discrete" sensors might&nbsp;provide you with a binary value.&nbsp;</h3>
-<h3 style="text-align: justify;">The&nbsp;digital sensor&nbsp;consists of majorly three components: sensor, cable, and&nbsp;transmitter.&nbsp;In digital sensors, the signal measured is directly converted into digital signal output inside the digital sensor itself. And this digital signal is transmitted&nbsp;through cable digitally. There are different types of digital sensors that overcome&nbsp;disadvantages of analog sensors.</h3>
+<td style="width: 808.516px;">
+<h3 style="text-align: center; border: 1px solid black;">Analog sensors capture analog signals that can assume any value in a range. Digital sensors output a&nbsp;range of values that increase in steps. For example, consider a push button: it binary and has only two values - "on" or "off".</h3>
 </td>
 </tr>
 </tbody>
 </table>
+<p style="text-align: justify; font-size: 16px;">In this <a href="https://www.youtube.com/watch?v=WxJKXGugfh8" target="_blank" rel="noopener">video</a> you discorver much more about the it.&nbsp;</p>
+<p style="text-align: justify; font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/raw/master/sensors/analog%20and%20digital%20sensors.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.&nbsp;</p>
+<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp;<a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license"><img style="border-width: 0;" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" alt="Licen&ccedil;a Creative Commons" width="130" height="46" /></a><br /><br /></p>
