--- a/sensors/sensors.html
+++ b/sensors/sensors.html
@@ -13,4 +13,4 @@
 </table>
 <p style="text-align: justify; font-size: 16px;">In this <a href="https://www.youtube.com/watch?v=WxJKXGugfh8" target="_blank" rel="noopener">video</a> you discorver much more about the it.&nbsp;</p>
 <p style="text-align: justify; font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/raw/master/sensors/analog%20and%20digital%20sensors.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.&nbsp;</p>
-<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp;<a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license"><img style="border-width: 0;" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" alt="Licen&ccedil;a Creative Commons" width="130" height="46" /></a><br /><br /></p>
+<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp;<br /><br /></p>
