--- a/switch/switch.html
+++ b/switch/switch.html
@@ -1,20 +1,32 @@
+<h1><span style="color: #000000;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
 <h1 style="text-align: justify;">Switches</h1>
-<h3 style="text-align: justify;">Electrical component&nbsp;that can "make" or "break" an&nbsp;electrical circuit, interrupting&nbsp;the&nbsp;current&nbsp;or diverting it from one conductor to another. It may be operated&nbsp;manually, for example, a light switch or a keyboard button; may be operated by a&nbsp;moving object such as a door, or may be operated by some sensing element for&nbsp;pressure, temperature or flow.</h3>
-<table style="height: 340px;" width="836">
+<table style="height: 84px;" width="830">
 <tbody>
 <tr>
-<td style="width: 407.266px;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/switch/toggle%20switch.jpg" alt="" width="209" height="209" /></td>
-<td style="width: 416.016px;">
-<h3 style="text-align: justify;">Toggle switch</h3>
-<h3 style="text-align: justify;">A toggle switch is manually actuated by a mechanical&nbsp;lever, handle or rocking&nbsp;mechanism. A very common use of this type of switch is to switch lights or other&nbsp;electrical equipment on or off. Everything (but really, everything) you wanna know about it, you can check out in this <a href="https://www.youtube.com/watch?v=uNIPx_bJ8VY" target="_blank" rel="noopener">video</a>.</h3>
-</td>
-</tr>
-<tr style="text-align: justify;">
-<td style="width: 407.266px;">&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/switch/pushbuttom.jpg" alt="" width="251" height="200" /></td>
-<td style="width: 416.016px;">
-<h3>Pushbutton or button (input)</h3>
-<h3>A switch mechanism used for controlling your circuit. For instance, in a circuit, you can make a&nbsp;LED turn on/off by pressing a button. <a href="https://www.youtube.com/watch?v=xEdZCRZVEtY" target="_blank" rel="noopener">Here</a> you can learn how a pushbuttom works in a circuit simulator.&nbsp;</h3>
+<td style="width: 823.516px;">
+<h3 style="text-align: center; border: 1px solid black;">Electrical components that can "make" or "break" an&nbsp;electrical circuit, interrupting&nbsp;the&nbsp;current&nbsp;or diverting it from one conductor to another. Bellow some examples:</h3>
 </td>
 </tr>
 </tbody>
 </table>
+<h3 style="text-align: center;">&nbsp;</h3>
+<table style="height: 340px; width: 835px;">
+<tbody>
+<tr>
+<td style="width: 201.199px;">&nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/switch/toggle%20switch.jpg?raw=true" alt="" width="179" height="179" /></td>
+<td style="width: 617.801px;">
+<h3 style="text-align: justify;">Toggle switch</h3>
+<p style="text-align: justify; font-size: 16px;">A very common use of this type of switch is to switch lights or other&nbsp;electrical equipment "on" or "off". Everything (but really, everything!) you want to know about it, you can check out in this <a href="https://www.youtube.com/watch?v=uNIPx_bJ8VY" target="_blank" rel="noopener">video</a>.</p>
+</td>
+</tr>
+<tr style="text-align: justify;">
+<td style="width: 201.199px;">&nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/switch/pushbuttom.jpg?raw=true" alt="" width="194" height="194" /></td>
+<td style="width: 617.801px;">
+<h3>Pushbutton (input)</h3>
+<p style="text-align: justify; font-size: 16px;">A switch mechanism used for controlling your circuit. For instance, in a circuit, you can make a&nbsp;LED turn on/off by pressing a button. <a href="https://www.youtube.com/watch?v=xEdZCRZVEtY" target="_blank" rel="noopener">Here</a> you can learn how a pushbutton works in a circuit simulator.&nbsp;</p>
+</td>
+</tr>
+</tbody>
+</table>
+<p style="text-align: justify; font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/raw/master/switch/switch.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.&nbsp;</p>
+<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp;<a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license"><img style="border-width: 0;" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" alt="Licen&ccedil;a Creative Commons" width="130" height="46" /></a><br /><br /></p>
