--- a/Arduino/Arduino.html
+++ b/Arduino/Arduino.html
@@ -1,10 +1,10 @@
 <h1><span style="color: #000000;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
 <h1>Arduino Board</h1>
-<table style="height: 254px; width: 843px;">
+<table style="height: 254px; width: 913px;">
 <tbody>
 <tr style="height: 210.133px;">
-<td style="width: 261.809px; height: 210.133px;"><img src="https://github.com/ecraft2learn/OER/blob/master/Raspberry%20Pi/Raspberry%20Pi.jpg?raw=true" alt="" width="280" height="192" /></td>
-<td style="width: 569.191px; height: 210.133px;">
+<td style="width: 284.906px; height: 210.133px;"><img src="https://github.com/ecraft2learn/OER/blob/master/Arduino/Arduino.jpg?raw=true" alt="" width="351" height="233" /></td>
+<td style="width: 545.094px; height: 210.133px;">
 <table style="width: 557px; height: 84px; border-style: solid; border-color: black;">
 <tbody>
 <tr>
@@ -16,11 +16,13 @@
 </table>
 <p style="text-align: justify;"><span style="font-size: 16px;">The user can program, monitor and communicate with the Arduino boards. They have digital and analogue pins that allow users to control actuators.&nbsp;</span><span style="font-size: 16px;">Input components can be everything, from simple digital buttons to variable resistors and sensors. </span></p>
 <p style="text-align: justify;"><span style="font-size: 16px;">The Arduino board provides you ways to turn your projects into standalone, portable digital artefacts suitable for a wide variety of scenarios.</span></p>
-<p style="text-align: justify;"><span style="font-size: 16px;">To learn more about it, check out the official <a href="https://www.arduino.cc/en/Guide/HomePage">webpage</a>&nbsp;and get started!&nbsp;</span></p>
+<p style="text-align: justify;"><span style="font-size: 16px;">To learn more about it, check out the following pages and&nbsp;</span><span style="font-size: 16px;">get started!</span></p>
+<p style="text-align: justify;"><span style="font-size: 16px;">- <a href="https://www.arduino.cc/en/Tutorial/BuiltInExamples" target="_blank" rel="noopener">Built-in examples</a><br /><br />- <a href="https://www.arduino.cc/reference/en/" target="_blank" rel="noopener">Code reference</a>&nbsp;<br /></span></p>
+<p style="text-align: justify;"><span style="font-size: 16px;">- <a href="https://create.arduino.cc/projecthub" target="_blank" rel="noopener">Tutorials on Arduino project hub</a>.</span></p>
 <p style="text-align: justify;"><span style="color: #000000;"><strong>&nbsp;</strong></span></p>
 </td>
 </tr>
 </tbody>
 </table>
-<p><a href="https://github.com/ecraft2learn/OER/raw/master/Raspberry%20Pi/Raspberry%20Pi.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.&nbsp;</p>
+<p><a href="https://github.com/ecraft2learn/OER/raw/master/Arduino/Arduino.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.&nbsp;</p>
 <p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp;&nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/Logos/Logo_PD.png?raw=true" alt="" width="71" height="74" /></p>
