--- a/Raspberry Pi/Raspberry Pi.html
+++ b/Raspberry Pi/Raspberry Pi.html
@@ -14,8 +14,10 @@
 </tr>
 </tbody>
 </table>
-<p style="text-align: justify;"><span style="font-size: 16px;">To learn more about it, check out the official <a href="https://www.raspberrypi.org/help/videos/">webpage</a>!&nbsp;</span></p>
-<p style="text-align: justify;"><span style="color: #000000;"><strong>&nbsp;</strong></span></p>
+<p style="text-align: justify;"><span style="font-size: 16px;">To learn more about it, check out the following webpages:</span></p>
+<p><span style="color: #000000; font-size: 16px;">- There is a very large collection of sample projects&nbsp;<a href="%20https://www.raspberrypi.org/resources/" target="_blank" rel="noopener">here</a>.</span></p>
+<p><span style="color: #000000; font-size: 16px;">- To learn about Raspberry Pi platform and python programming, check out this <a href="https://www.coursera.org/learn/raspberry-pi-platform" target="_blank" rel="noopener">page</a>.</span></p>
+<p><span style="color: #000000; font-size: 16px;">- To learn how to interface with Raspberry Pi, click <a href="https://www.coursera.org/learn/raspberry-pi-interface" target="_blank" rel="noopener">here</a>.</span></p>
 </td>
 </tr>
 </tbody>
