--- a/Ultimaker 3D printing/Students_OER/3D CAD Modelling in TinkerCAD/paging.html
+++ b/Ultimaker 3D printing/Students_OER/3D CAD Modelling in TinkerCAD/paging.html
@@ -20,3 +20,10 @@
 		</p>
 	</body>
 </html>
+<p><a href="https://github.com/ecraft2learn/OER/raw/master/Ultimaker%203D
+
+%20printing/Students_OER/3D%20CAD%20Modelling%20in%20TinkerCAD/3D%20CAD%20Modelling%20in
+
+%20TinkerCAD.pdf"><button type="button">Click here</button></a>&nbsp;to download this 
+
+file.&nbsp;</p>
