--- a/Ultimaker 3D printing/Teachers_OER/Ultimaker 3 User Manual/paging.html
+++ b/Ultimaker 3D printing/Teachers_OER/Ultimaker 3 User Manual/paging.html
@@ -255,3 +255,5 @@
 		</p>
 	</body>
 </html>
+
+<p><a href="https://github.com/ecraft2learn/OER/raw/master/Ultimaker%203D%20printing/Teachers_OER/Ultimaker%203%20User%20Manual/Ultimaker%203%20User%20Manual.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.&nbsp;</p>
