Removed style=... from non-Ultimaker files

--- a/IR array/IR array.html
+++ b/IR array/IR array.html
@@ -1,25 +1,25 @@
-<h1><span style="color: #000000;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
-<h1><span style="color: #000000;">Infrared (IR) array</span></h1>
-<table style="height: 243px; width: 830px;">
-<tbody>
-<tr style="height: 247px;">
-<td style="width: 358.145px; height: 247px;"><img src="https://github.com/ecraft2learn/OER/blob/master/IR%20array/IR_array.jpg?raw=true" alt="" width="342" height="227" /></td>
-<td style="width: 459.855px; height: 247px;">
-<p style="font-size: 15px;">A device with IR sensors that sends and receives LEDs. The infrared light receives back the light from the transmitter LED when hits a reflective surface.</p>
-<table style="height: 101px; border: 1px solid black; margin-left: auto; margin-right: auto;" width="429">
+<h1><span><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
+<h1><span>Infrared (IR) array</span></h1>
+<table>
 <tbody>
 <tr>
-<td style="width: 422.266px;">
-<h3 style="text-align: center;">It senses the presence or&nbsp;the absence of a line or a object moving across this line.</h3>
+<td><img src="https://github.com/ecraft2learn/OER/blob/master/IR%20array/IR_array.jpg?raw=true" alt="" width="342" height="227" /></td>
+<td>
+<p>A device with IR sensors that sends and receives LEDs. The infrared light receives back the light from the transmitter LED when hits a reflective surface.</p>
+<table width="429">
+<tbody>
+<tr>
+<td>
+<h3>It senses the presence or&nbsp;the absence of a line or a object moving across this line.</h3>
 </td>
 </tr>
 </tbody>
 </table>
-<p style="font-size: 15px;">Check out how to make a line follower robot in this <a href="https://www.youtube.com/watch?v=F1-pWC4HmHg">video</a>.&nbsp;&nbsp;</p>
-<p style="font-size: 15px;"><a href="https://github.com/ecraft2learn/OER/raw/master/IR%20array/IR%20ARRAY.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
+<p>Check out how to make a line follower robot in this <a href="https://www.youtube.com/watch?v=F1-pWC4HmHg">video</a>.&nbsp;&nbsp;</p>
+<p><a href="https://github.com/ecraft2learn/OER/raw/master/IR%20array/IR%20ARRAY.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
 </td>
 </tr>
 </tbody>
 </table>
 <p>&nbsp;</p>
-<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp; &nbsp;<a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license"><img style="border-width: 0;" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" alt="Licen&ccedil;a Creative Commons" width="122" height="43" /></a></p>
+<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp; &nbsp;<a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license"><img src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" alt="Licen&ccedil;a Creative Commons" width="122" height="43" /></a></p>
