--- a/LDR sensor/LDR sensor.html
+++ b/LDR sensor/LDR sensor.html
@@ -1,15 +1,15 @@
-<h1><span style="color: #000000;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
+<h1><span><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
 <h1>LDR sensor</h1>
-<table style="height: 166px; width: 829px;">
+<table>
 <tbody>
 <tr>
-<td style="width: 244.766px; text-align: center;"><img src="https://github.com/ecraft2learn/OER/blob/master/LDR%20sensor/LDR%20sensor.jpg?raw=true" alt="" width="252" height="252" />&nbsp;</td>
-<td style="font-size: 16px; width: 572.266px; text-align: justify;">
-<p style="text-align: justify;">A light sensor&nbsp;is something that a robot can use to detect the current ambient light level - i.e. how bright/dark it is. There are a range of different types of light sensors, including 'Photoresistors'.</p>
-<table style="height: 77px;" width="501">
+<td><img src="https://github.com/ecraft2learn/OER/blob/master/LDR%20sensor/LDR%20sensor.jpg?raw=true" alt="" width="252" height="252" />&nbsp;</td>
+<td>
+<p>A light sensor&nbsp;is something that a robot can use to detect the current ambient light level - i.e. how bright/dark it is. There are a range of different types of light sensors, including 'Photoresistors'.</p>
+<table width="501">
 <tbody>
 <tr>
-<td style="width: 493.516px; text-align: center; border: 1px solid black;">
+<td>
 <h3>A photoresistor or LDR (light dependent resistor) sensor changes its resistance analogue value (0-1023) based on the amount of light that falls upon it. The net effect is an improvement in its conductivity with a decrease in resistance for an increase in illumination.</h3>
 </td>
 </tr>
@@ -20,6 +20,6 @@
 </tr>
 </tbody>
 </table>
-<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/raw/master/LDR%20sensor/Light%20sensor.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
+<p><a href="https://github.com/ecraft2learn/OER/raw/master/LDR%20sensor/Light%20sensor.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
 <p>&nbsp;</p>
-<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp;&nbsp;<a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license"><img style="border-width: 0;" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" alt="Licen&ccedil;a Creative Commons" width="142" height="50" /></a></p>
+<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp;&nbsp;<a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license"><img src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" alt="Licen&ccedil;a Creative Commons" width="142" height="50" /></a></p>
