--- a/LED/LED.html
+++ b/LED/LED.html
@@ -1,15 +1,15 @@
-<h1><span style="color: #000000;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
+<h1><span><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
 <h1>LED (Light Emitting Diode)</h1>
-<table style="height: 273px; width: 834px;">
+<table>
 <tbody>
-<tr style="height: 283.047px;">
-<td style="width: 311.016px; height: 283.047px;">&nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/LED/LED.jpg?raw=true" alt="" width="299" height="105" /></td>
-<td style="width: 511.016px; height: 283.047px;">
-<h3 style="font-size: 16px; text-align: center;">LED is a semiconductor light source.</h3>
+<tr>
+<td>&nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/LED/LED.jpg?raw=true" alt="" width="299" height="105" /></td>
+<td>
+<h3>LED is a semiconductor light source.</h3>
 <p>&nbsp;</p>
-<p style="font-size: 16px; text-align: justify;">This means that if connected correctly (suitable voltage) to an energy source (battery), it will turn on.</p>
-<p style="font-size: 16px; text-align: justify;">They come in colour and consume very low energy.</p>
-<p style="font-size: 15px;">Check in this <a href="https://www.youtube.com/watch?v=Iwv5momDiKQ">video</a> how a LED works.</p>
+<p>This means that if connected correctly (suitable voltage) to an energy source (battery), it will turn on.</p>
+<p>They come in colour and consume very low energy.</p>
+<p>Check in this <a href="https://www.youtube.com/watch?v=Iwv5momDiKQ">video</a> how a LED works.</p>
 </td>
 </tr>
 </tbody>
