--- a/conductive thread/Conductive thread.html
+++ b/conductive thread/Conductive thread.html
@@ -1,26 +1,26 @@
-<h1><span style="color: #000000;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
-<h1><span style="color: #000000;">Conductive thread</span></h1>
-<table style="height: 303px; width: 827px;">
+<h1><span><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
+<h1><span>Conductive thread</span></h1>
+<table>
 <tbody>
 <tr>
-<td style="width: 283.352px;">
+<td>
 <p>&nbsp; &nbsp; &nbsp; &nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/conductive%20thread/Conductive%20thread.jpg?raw=true" alt="" width="226" height="226" /></p>
 </td>
-<td style="width: 531.648px;">
-<p style="text-align: justify; font-size: 16px;">A little thicker than every day thread, but still thin enough to&nbsp;be sewn in medium-eye needles or with a sewing machine that can&nbsp;handle "heavy" thread.</p>
-<table style="height: 16px;" width="481">
+<td>
+<p>A little thicker than every day thread, but still thin enough to&nbsp;be sewn in medium-eye needles or with a sewing machine that can&nbsp;handle "heavy" thread.</p>
+<table width="481">
 <tbody>
 <tr>
-<td style="width: 473.516px;">
-<h3 style="text-align: center; border: 1px solid black;">It is ideal for any&nbsp;wearable/e-textile project. It is made of stainless steel fibers, thus your projects will not "stop working" because of oxidation after a few&nbsp;months and its safe to wash.</h3>
+<td>
+<h3>It is ideal for any&nbsp;wearable/e-textile project. It is made of stainless steel fibers, thus your projects will not "stop working" because of oxidation after a few&nbsp;months and its safe to wash.</h3>
 </td>
 </tr>
 </tbody>
 </table>
-<p style="text-align: justify; font-size: 16px;">In&nbsp;<a href="https://www.youtube.com/watch?v=XT5ygUt8Cbk" target="_blank" rel="noopener">Conductive Thread - 10 tips</a>&nbsp;you get inspiration for your project!</p>
-<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/raw/master/conductive%20thread/Conductive%20thread.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
+<p>In&nbsp;<a href="https://www.youtube.com/watch?v=XT5ygUt8Cbk" target="_blank" rel="noopener">Conductive Thread - 10 tips</a>&nbsp;you get inspiration for your project!</p>
+<p><a href="https://github.com/ecraft2learn/OER/raw/master/conductive%20thread/Conductive%20thread.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
 </td>
 </tr>
 </tbody>
 </table>
-<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp; &nbsp;<a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license"><img style="border-width: 0;" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" alt="Licen&ccedil;a Creative Commons" width="128" height="45" /></a></p>
+<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp; &nbsp;<a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license"><img src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" alt="Licen&ccedil;a Creative Commons" width="128" height="45" /></a></p>
