--- a/piezo sensor/piezo sensor.html
+++ b/piezo sensor/piezo sensor.html
@@ -1,21 +1,21 @@
-<h1><span style="color: #000000;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
+<h1><span><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
 <h1>Piezo sensor</h1>
-<table style="height: 189px; width: 839px;">
+<table>
 <tbody>
 <tr>
-<td style="width: 253.516px;">&nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/piezo%20sensor/piezo%20sensor.gif?raw=true" alt="" width="256" height="256" /></td>
-<td style="width: 573.516px;">
-<table style="height: 71px; margin-left: auto; margin-right: auto;" width="501">
+<td>&nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/piezo%20sensor/piezo%20sensor.gif?raw=true" alt="" width="256" height="256" /></td>
+<td>
+<table width="501">
 <tbody>
 <tr>
-<td style="width: 493.516px;">
-<h3 style="text-align: center; border: 1px solid black;">A device that uses the piezoelectric effect to measure changes in pressure, acceleration, temperature or force by converting them to electricity (voltage).</h3>
+<td>
+<h3>A device that uses the piezoelectric effect to measure changes in pressure, acceleration, temperature or force by converting them to electricity (voltage).</h3>
 </td>
 </tr>
 </tbody>
 </table>
-<p style="font-size: 16px;">The prefix piezo-is Greek for "press" or "squeeze".</p>
-<p style="font-size: 16px;">If you want to investigate more about piezo mechanisms for motion control, check out this <a href="https://www.youtube.com/watch?v=fHp95e-CwWQ&amp;amp;t=6s&quot;%20target=&quot;_blank&quot; rel=&quot;noopener">video</a>.</p>
+<p>The prefix piezo-is Greek for "press" or "squeeze".</p>
+<p>If you want to investigate more about piezo mechanisms for motion control, check out this <a href="https://www.youtube.com/watch?v=fHp95e-CwWQ&amp;amp;t=6s&quot;%20target=&quot;_blank&quot; rel=&quot;noopener">video</a>.</p>
 <p>&nbsp;</p>
 </td>
 </tr>
