--- a/potentionmeter sensor/potentiometer.html
+++ b/potentionmeter sensor/potentiometer.html
@@ -1,24 +1,24 @@
-<h1><span style="color: #000000;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
+<h1><span><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
 <h1>Potentiometer</h1>
-<table style="height: 86px; width: 847px;">
+<table>
 <tbody>
 <tr>
-<td style="width: 289.68px;">&nbsp; &nbsp; &nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/potentionmeter%20sensor/Potentiometer.jpg?raw=true" alt="" width="240" height="240" /></td>
-<td style="width: 545.32px;">
-<p style="text-align: justify; font-size: 16px;">A manually adjustable, variable resistor with three terminals. Two terminals are&nbsp;connected to a resistive element, the third terminal is connected to an adjustable&nbsp;wiper.</p>
-<table style="height: 18px;" width="574">
+<td>&nbsp; &nbsp; &nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/potentionmeter%20sensor/Potentiometer.jpg?raw=true" alt="" width="240" height="240" /></td>
+<td>
+<p>A manually adjustable, variable resistor with three terminals. Two terminals are&nbsp;connected to a resistive element, the third terminal is connected to an adjustable&nbsp;wiper.</p>
+<table width="574">
 <tbody>
 <tr>
-<td style="width: 567.266px;">
-<h3 style="text-align: center; border: 1px solid black;">The position of the wiper determines the output voltage.</h3>
+<td>
+<h3>The position of the wiper determines the output voltage.</h3>
 </td>
 </tr>
 </tbody>
 </table>
-<p style="text-align: justify; font-size: 16px;">In this <a href="https://www.youtube.com/watch?v=XR8ede6V6eA" target="_blank" rel="noopener">video</a> you learn how to use it and add to your circuit.&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</p>
+<p>In this <a href="https://www.youtube.com/watch?v=XR8ede6V6eA" target="_blank" rel="noopener">video</a> you learn how to use it and add to your circuit.&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;</p>
 </td>
 </tr>
 </tbody>
 </table>
 <p><a href="https://github.com/ecraft2learn/OER/raw/master/potentionmeter%20sensor/Potentiometer.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.&nbsp;</p>
-<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp;<a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license"><img style="border-width: 0;" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" alt="Licen&ccedil;a Creative Commons" width="130" height="46" /></a><br /><br /></p>
+<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp;<a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license"><img src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" alt="Licen&ccedil;a Creative Commons" width="130" height="46" /></a><br /><br /></p>
