--- a/3D printing/3D printing.html
+++ b/3D printing/3D printing.html
@@ -1,23 +1,23 @@
-<h1><span style="color: #000000;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
+<h1><span ><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
 <h1>3D Printing - Ultimaker</h1>
-<table style="height: 254px; width: 895px;">
+<table >
 <tbody>
-<tr style="height: 210.133px;">
-<td style="width: 357.883px; height: 210.133px;"><img src="https://github.com/ecraft2learn/OER/blob/master/3D%20printing/3D%20printing.jpg?raw=true" alt="" width="256" height="170" /></td>
-<td style="width: 458.117px; height: 210.133px;">
+<tr >
+<td ><img src="https://github.com/ecraft2learn/OER/blob/master/3D%20printing/3D%20printing.jpg?raw=true" alt="" width="256" height="170" /></td>
+<td >
 <p>&nbsp;</p>
-<table style="width: 628px; height: 94px; border-style: solid; border-color: black;">
+<table >
 <tbody>
 <tr>
-<td style="width: 621.016px;">
-<h3 style="text-align: center;">3D printing provides you with a means to design and manufacture physical components and/or parts that will integrate with the DIY electronics of your project.</h3>
+<td >
+<h3 >3D printing provides you with a means to design and manufacture physical components and/or parts that will integrate with the DIY electronics of your project.</h3>
 </td>
 </tr>
 </tbody>
 </table>
-<p style="text-align: justify;"><span style="font-size: 16px;">3D printing technology enables you to fully engage with the iterative design of product prototypes. Even if the final product is manufactured using other materials and techniques, during the design development stage, small-scale models can be quickly produced in order to test your ideas.&nbsp;</span></p>
-<p style="text-align: justify;"><span style="font-size: 16px;">To learn more about it, check out the official <a href="https://ultimaker.com/en/education">webpage</a>&nbsp;and get inspired!&nbsp;</span></p>
-<p style="text-align: justify;"><span style="color: #000000;"><strong>&nbsp;</strong></span></p>
+<p ><span >3D printing technology enables you to fully engage with the iterative design of product prototypes. Even if the final product is manufactured using other materials and techniques, during the design development stage, small-scale models can be quickly produced in order to test your ideas.&nbsp;</span></p>
+<p ><span >To learn more about it, check out the official <a href="https://ultimaker.com/en/education">webpage</a>&nbsp;and get inspired!&nbsp;</span></p>
+<p ><span ><strong>&nbsp;</strong></span></p>
 </td>
 </tr>
 </tbody>
