--- a/IR proximity sensor/IR proximity sensor.html
+++ b/IR proximity sensor/IR proximity sensor.html
@@ -1,25 +1,25 @@
-<h1><span style="color: #000000;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
-<h1><span style="color: #000000;">Infrared (IR) proximity sensor</span></h1>
-<table style="height: 377px; width: 825px;">
+<h1><span><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
+<h1><span>Infrared (IR) proximity sensor</span></h1>
+<table>
 <tbody>
 <tr>
-<td style="width: 243.957px; text-align: center;"><img src="https://github.com/ecraft2learn/OER/blob/master/IR%20proximity%20sensor/IR%20proximity%20sensor.jpg?raw=true" alt="" width="239" height="239" />&nbsp;</td>
-<td style="width: 568.043px;">
-<table style="height: 28px;" width="508">
+<td><img src="https://github.com/ecraft2learn/OER/blob/master/IR%20proximity%20sensor/IR%20proximity%20sensor.jpg?raw=true" alt="" width="239" height="239" />&nbsp;</td>
+<td>
+<table width="508">
 <tbody>
 <tr>
-<td style="width: 501.016px;">
-<h3 style="text-align: center; border: 1px solid black;">IR is a light with wavelength that is not visible to human eyes, but cameras&nbsp;can see it.&nbsp;</h3>
+<td>
+<h3>IR is a light with wavelength that is not visible to human eyes, but cameras&nbsp;can see it.&nbsp;</h3>
 </td>
 </tr>
 </tbody>
 </table>
-<p style="font-size: 16px; text-align: justify;">In a Proximity Sensor, an IR LED and a Photodiode are used to detect&nbsp;obstacles. The IR LED transmits light in forward direction. When an&nbsp;obstacle is ahead, the light reflects and the photodiode is activated. By&nbsp;this method, an obstacle is detected. Finally, the sensor measures the distance of&nbsp;the object and returns a value (e.g. cm).</p>
-<p style="font-size: 16px; text-align: justify;">Check in this <a href="https://www.youtube.com/watch?v=f6vTo79PZUw">video</a> how to use an IR proximity sensor.&nbsp;</p>
+<p>In a Proximity Sensor, an IR LED and a Photodiode are used to detect&nbsp;obstacles. The IR LED transmits light in forward direction. When an&nbsp;obstacle is ahead, the light reflects and the photodiode is activated. By&nbsp;this method, an obstacle is detected. Finally, the sensor measures the distance of&nbsp;the object and returns a value (e.g. cm).</p>
+<p>Check in this <a href="https://www.youtube.com/watch?v=f6vTo79PZUw">video</a> how to use an IR proximity sensor.&nbsp;</p>
 </td>
 </tr>
 </tbody>
 </table>
-<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/raw/master/IR%20proximity%20sensor/IR%20proximity%20sensor.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
+<p><a href="https://github.com/ecraft2learn/OER/raw/master/IR%20proximity%20sensor/IR%20proximity%20sensor.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
 <p>&nbsp;</p>
-<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp; &nbsp;<a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license"><img style="border-width: 0;" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" alt="Licen&ccedil;a Creative Commons" width="128" height="45" /></a></p>
+<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp; &nbsp;<a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license"><img src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" alt="Licen&ccedil;a Creative Commons" width="128" height="45" /></a></p>
