--- a/arduino/Arduino.html
+++ b/arduino/Arduino.html
@@ -1,25 +1,25 @@
-<h1><span style="color: #000000;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
+<h1><span ><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
 <h1>Arduino Board</h1>
-<table style="height: 254px; width: 913px;">
+<table >
 <tbody>
-<tr style="height: 210.133px;">
-<td style="width: 284.906px; height: 210.133px;"><img src="https://github.com/ecraft2learn/OER/blob/master/arduino/Arduino.jpg?raw=true" alt="" width="374" height="250" /></td>
-<td style="width: 545.094px; height: 210.133px;">
-<table style="width: 557px; height: 84px; border-style: solid; border-color: black;">
+<tr >
+<td ><img src="https://github.com/ecraft2learn/OER/blob/master/arduino/Arduino.jpg?raw=true" alt="" width="374" height="250" /></td>
+<td >
+<table >
 <tbody>
 <tr>
-<td style="width: 549.766px;">
-<h3 style="text-align: center;">External devices such as Arduino boards will be used to control sensors and actuators.</h3>
+<td >
+<h3 >External devices such as Arduino boards will be used to control sensors and actuators.</h3>
 </td>
 </tr>
 </tbody>
 </table>
-<p style="text-align: justify;"><span style="font-size: 16px;">The user can program, monitor and communicate with the Arduino boards. They have digital and analogue pins that allow users to control actuators.&nbsp;</span><span style="font-size: 16px;">Input components can be everything, from simple digital buttons to variable resistors and sensors. </span></p>
-<p style="text-align: justify;"><span style="font-size: 16px;">The Arduino board provides you ways to turn your projects into standalone, portable digital artefacts suitable for a wide variety of scenarios.</span></p>
-<p style="text-align: justify;"><span style="font-size: 16px;">To learn more about it, check out the following pages and&nbsp;</span><span style="font-size: 16px;">get started!</span></p>
-<p style="text-align: justify;"><span style="font-size: 16px;">- <a href="https://www.arduino.cc/en/Tutorial/BuiltInExamples" target="_blank" rel="noopener">Built-in examples</a><br /><br />- <a href="https://www.arduino.cc/reference/en/" target="_blank" rel="noopener">Code reference</a>&nbsp;<br /></span></p>
-<p style="text-align: justify;"><span style="font-size: 16px;">- <a href="https://create.arduino.cc/projecthub" target="_blank" rel="noopener">Tutorials on Arduino project hub</a>.</span></p>
-<p style="text-align: justify;"><span style="color: #000000;"><strong>&nbsp;</strong></span></p>
+<p ><span >The user can program, monitor and communicate with the Arduino boards. They have digital and analogue pins that allow users to control actuators.&nbsp;</span><span >Input components can be everything, from simple digital buttons to variable resistors and sensors. </span></p>
+<p ><span >The Arduino board provides you ways to turn your projects into standalone, portable digital artefacts suitable for a wide variety of scenarios.</span></p>
+<p ><span >To learn more about it, check out the following pages and&nbsp;</span><span >get started!</span></p>
+<p ><span >- <a href="https://www.arduino.cc/en/Tutorial/BuiltInExamples" target="_blank" rel="noopener">Built-in examples</a><br /><br />- <a href="https://www.arduino.cc/reference/en/" target="_blank" rel="noopener">Code reference</a>&nbsp;<br /></span></p>
+<p ><span >- <a href="https://create.arduino.cc/projecthub" target="_blank" rel="noopener">Tutorials on Arduino project hub</a>.</span></p>
+<p ><span ><strong>&nbsp;</strong></span></p>
 </td>
 </tr>
 </tbody>
