--- a/batteries/batteries.html
+++ b/batteries/batteries.html
@@ -1,22 +1,22 @@
-<h1><span style="color: #000000;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
-<h1><span style="color: #000000;">Battery</span></h1>
-<table style="height: 160px; width: 845px;">
+<h1><span><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
+<h1><span>Battery</span></h1>
+<table>
 <tbody>
 <tr>
-<td style="width: 317.266px;">&nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/batteries/Batteries.jpg?raw=true" alt="" width="300" height="214" /></td>
-<td style="width: 516.016px;">
-<table style="height: 26px;" width="514">
+<td>&nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/batteries/Batteries.jpg?raw=true" alt="" width="300" height="214" /></td>
+<td>
+<table width="514">
 <tbody>
 <tr>
-<td style="width: 507.266px;">
-<h3 style="text-align: center; border: 1px solid black;">An electric battery is a device consisting of one or more electrochemical cells with external connections to power electrical devices, such as flashlights, smartphones and electric cars.</h3>
+<td>
+<h3>An electric battery is a device consisting of one or more electrochemical cells with external connections to power electrical devices, such as flashlights, smartphones and electric cars.</h3>
 </td>
 </tr>
 </tbody>
 </table>
-<p style="font-size: 16px;">Batteries are useful if your project cannot be powered by the Arduino. All kind of batteries might be used (from a standard AAA, coin, lithium, etc.).</p>
-<p style="font-size: 16px;"><span style="color: #000000;"><a href="https://www.youtube.com/watch?v=9OVtk6G2TnQ" target="_blank" rel="noopener">How batteries work</a>&nbsp;will charge your knowledge!</span></p>
-<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/raw/master/batteries/Batteries.jpg"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
+<p>Batteries are useful if your project cannot be powered by the Arduino. All kind of batteries might be used (from a standard AAA, coin, lithium, etc.).</p>
+<p><span><a href="https://www.youtube.com/watch?v=9OVtk6G2TnQ" target="_blank" rel="noopener">How batteries work</a>&nbsp;will charge your knowledge!</span></p>
+<p><a href="https://github.com/ecraft2learn/OER/raw/master/batteries/Batteries.jpg"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
 </td>
 </tr>
 </tbody>
