--- a/conductive paint/conductive paint.html
+++ b/conductive paint/conductive paint.html
@@ -1,18 +1,18 @@
-<h1><span style="color: #000000;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
-<h1><span style="color: #000000;">Conductive paint</span></h1>
-<table style="height: 195px; width: 826px;">
+<h1><span><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
+<h1><span>Conductive paint</span></h1>
+<table>
 <tbody>
 <tr>
-<td style="width: 309.766px;">
+<td>
 <p>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/conductive%20paint/Conductive%20paint.jpg?raw=true" alt="" width="208" height="208" /></p>
 </td>
-<td style="width: 503.516px;">
-<h3 style="text-align: center;">Paint that allows electricity to flow.</h3>
-<p style="text-align: justify; font-size: 16px;">Circuits can be painted on different materials including&nbsp;paper, cardboard, wood, metal, etc. Need to wait for paint to dry.</p>
-<p style="text-align: justify; font-size: 16px;">This conductive paint video will wire you up: https://www.youtube.com/watch?v=ySalbunIPNw.</p>
-<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/raw/master/conductive%20paint/Conductive%20paint.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
+<td>
+<h3>Paint that allows electricity to flow.</h3>
+<p>Circuits can be painted on different materials including&nbsp;paper, cardboard, wood, metal, etc. Need to wait for paint to dry.</p>
+<p>This conductive paint video will wire you up: https://www.youtube.com/watch?v=ySalbunIPNw.</p>
+<p><a href="https://github.com/ecraft2learn/OER/raw/master/conductive%20paint/Conductive%20paint.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
 </td>
 </tr>
 </tbody>
 </table>
-<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp; &nbsp;<a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license"><img style="border-width: 0;" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" alt="Licen&ccedil;a Creative Commons" width="128" height="45" /></a></p>
+<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp; &nbsp;<a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license"><img src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" alt="Licen&ccedil;a Creative Commons" width="128" height="45" /></a></p>
