--- a/copper tape/copper tape.html
+++ b/copper tape/copper tape.html
@@ -1,16 +1,16 @@
-<h1><span style="color: #000000;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
-<h1><span style="color: #000000;">Copper tape</span></h1>
-<table style="height: 123px; width: 833px;">
+<h1><span><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
+<h1><span>Copper tape</span></h1>
+<table>
 <tbody>
 <tr>
-<td style="width: 311.016px;">
+<td>
 <p>&nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/copper%20tape/Copper%20tape.jpg?raw=true" alt="" width="275" height="155" /></p>
 </td>
-<td style="width: 509.766px;">
-<h3 style="text-align: center;">Copper tape provide ways to make surfaces conductive.</h3>
-<p style="font-size: 16px;"><a href="https://www.youtube.com/watch?v=XKTPqtRwwXA" target="_blank" rel="noopener">Starting with copper tape</a>&nbsp;will inspire you for much more.</p>
-<p style="font-size: 16px;">Tip: you could use aluminium foil&nbsp;paper and glue to get the same effect!</p>
-<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/raw/master/copper%20tape/Copper%20tape.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
+<td>
+<h3>Copper tape provide ways to make surfaces conductive.</h3>
+<p><a href="https://www.youtube.com/watch?v=XKTPqtRwwXA" target="_blank" rel="noopener">Starting with copper tape</a>&nbsp;will inspire you for much more.</p>
+<p>Tip: you could use aluminium foil&nbsp;paper and glue to get the same effect!</p>
+<p><a href="https://github.com/ecraft2learn/OER/raw/master/copper%20tape/Copper%20tape.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
 </td>
 </tr>
 </tbody>
