--- a/digital and analog signals/analag and digital signs.html
+++ b/digital and analog signals/analag and digital signs.html
@@ -1,22 +1,22 @@
-<h1><span style="color: #000000;"><img 
+<h1><span><img 
 src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" 
 width="215" height="41" /></span></h1>
-<h1><span style="color: #000000;">Analog and Digital Signals</span></h1>
-<table style="height: 399px;" width="816">
+<h1><span>Analog and Digital Signals</span></h1>
+<table width="816">
 <tbody>
 <tr>
-<td style="width: 399.766px;">
-<h3 style="text-align: center;">Analog Signals</h3>
-<table style="height: 345px; width: 379px;">
+<td>
+<h3>Analog Signals</h3>
+<table>
 <tbody>
 <tr>
-<td style="width: 372.266px;">
-<p style="font-size: 16px;">Our world is analogue, with infinite values of for example sounds, or 
+<td>
+<p>Our world is analogue, with infinite values of for example sounds, or 
 colour values.</p>
-<p style="font-size: 16px;">With an Arduino board, you use the analogue pins to read spans of values 
+<p>With an Arduino board, you use the analogue pins to read spans of values 
 from sensors, or the Pulse Width Modulation (PWM) pins marked with a ~(tilde) symbol to control the 
 current flow to a connected component.</p>
-<p style="font-size: 16px;">On a Raspberry Pi, there are no pure analogue input pins, hence two 
+<p>On a Raspberry Pi, there are no pure analogue input pins, hence two 
 alternative options are made the scene. The 1st option is to use a specially designed A/D circuit 
 chip (a Raspberry Pi &ldquo;hat&rdquo;). The 2nd option is to use an Arduino as an analogue sensor 
 board, in conjunction with the Snap4Arduino software package.</p>
@@ -26,33 +26,33 @@ board, in conjunction with the Snap4Arduino software package.</p>
 </table>
 <p>&nbsp;</p>
 </td>
-<td style="width: 403.516px;">
-<h3 style="text-align: center;">Digital Signals</h3>
-<table style="height: 31px;" width="347">
+<td>
+<h3>Digital Signals</h3>
+<table width="347">
 <tbody>
 <tr>
-<td style="width: 339.766px;">
-<p style="font-size: 16px;">Digital signals have a set span of values.</p>
-<p style="font-size: 16px;">When you use an Arduino, digital signals are either On or Off - 
+<td>
+<p>Digital signals have a set span of values.</p>
+<p>When you use an Arduino, digital signals are either On or Off - 
 &lsquo;HIGH&rsquo; or &lsquo;LOW&rsquo; - 0V or 5V/3.3V. On an Arduino board, there are 14 digital 
 pins that can be used to write or read to and from electronic components.</p>
-<p style="font-size: 16px;">On a Raspberry Pi, there is a considerable number of digital 
+<p>On a Raspberry Pi, there is a considerable number of digital 
 inputs/outputs on its 40-pin connector that comply with 3.3V logic.</p>
 </td>
 </tr>
 </tbody>
 </table>
 <p>&nbsp;</p>
-<h3 style="text-align: justify; font-size: 16px;">You won&acute;t miss the&nbsp;difference between 
+<h3>You won&acute;t miss the&nbsp;difference between 
 analog and digital signs&nbsp;after watching this <a href="https://www.youtube.com/watch?
 v=RQc_frX50BA" target="_blank" rel="noopener">video.</a></h3>
 </td>
 </tr>
 </tbody>
 </table>
-<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/raw/master/digital%20and%20analog%20signals/Digital%20and%20analog%20signal.pdf"><button type="button">Click 
+<p><a href="https://github.com/ecraft2learn/OER/raw/master/digital%20and%20analog%20signals/Digital%20and%20analog%20signal.pdf"><button type="button">Click 
 here</button></a>&nbsp;to download this file.</p>
-<p style="font-size: 16px;">&nbsp;</p>
+<p>&nbsp;</p>
 <p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" 
 alt="" width="330" height="66" />&nbsp;</p>
 <p>&nbsp;</p>
