--- a/flex sensor/flex sensor.html
+++ b/flex sensor/flex sensor.html
@@ -1,25 +1,25 @@
-<h1><span style="color: #000000;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
-<h1><span style="color: #000000;">Flex sensor</span></h1>
-<table style="height: 247px; width: 829px;">
+<h1><span><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
+<h1><span>Flex sensor</span></h1>
+<table>
 <tbody>
 <tr>
-<td style="width: 309.766px;">&nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/flex%20sensor/flex_sensor.png?raw=true" alt="" width="278" height="225" /></td>
-<td style="width: 507.266px; text-align: justify;">
-<p style="font-size: 16px;">A&nbsp;flex/bend sensor measures the amount&nbsp;of&nbsp;deflection&nbsp;or&nbsp;bending.</p>
-<table style="height: 20px;" width="501">
+<td>&nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/flex%20sensor/flex_sensor.png?raw=true" alt="" width="278" height="225" /></td>
+<td>
+<p>A&nbsp;flex/bend sensor measures the amount&nbsp;of&nbsp;deflection&nbsp;or&nbsp;bending.</p>
+<table width="501">
 <tbody>
 <tr>
-<td style="width: 493.516px; text-align: center; border: 1px solid black;">
+<td>
 <h3>Usually, the sensor is attached to the surface, and resistance of&nbsp;sensor element is varied by bending the surface, which return a resistance value depending&nbsp;the amount of bending.</h3>
 </td>
 </tr>
 </tbody>
 </table>
-<p style="font-size: 16px;">This video about&nbsp;<span style="color: #000000;"><strong><a href="https://www.youtube.com/watch?v=1TfKs-PUL4U" target="_blank" rel="noopener">Flex sensor</a>&nbsp;makes everything simple!</strong></span></p>
-<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/raw/master/flex%20sensor/Flex%20sensor.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
+<p>This video about&nbsp;<span><strong><a href="https://www.youtube.com/watch?v=1TfKs-PUL4U" target="_blank" rel="noopener">Flex sensor</a>&nbsp;makes everything simple!</strong></span></p>
+<p><a href="https://github.com/ecraft2learn/OER/raw/master/flex%20sensor/Flex%20sensor.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
 </td>
 </tr>
 </tbody>
 </table>
 <p>&nbsp;</p>
-<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp; &nbsp;<a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license"><img style="border-width: 0;" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" alt="Licen&ccedil;a Creative Commons" width="128" height="45" /></a></p>
+<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp; &nbsp;<a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license"><img src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" alt="Licen&ccedil;a Creative Commons" width="128" height="45" /></a></p>
