--- a/gas sensor/gas sensor.html
+++ b/gas sensor/gas sensor.html
@@ -1,27 +1,27 @@
-<h1><span style="color: #000000;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
-<h1><span style="color: #000000;">Gas sensor</span></h1>
-<table style="height: 271px; width: 829px;">
+<h1><span><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
+<h1><span>Gas sensor</span></h1>
+<table>
 <tbody>
 <tr>
-<td style="width: 311.016px; text-align: center;">
+<td>
 <h3>&nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/gas%20sensor/gas%20sensor.jpg?raw=true" alt="" width="249" height="249" /></h3>
 </td>
-<td style="width: 506.016px; text-align: justify;">
-<table style="height: 80px;" width="499">
+<td>
+<table width="499">
 <tbody>
 <tr>
-<td style="width: 492.266px; text-align: center; border: 1px solid black;">
+<td>
 <h3>A&nbsp;gas detector&nbsp;is a device that detects the presence of&nbsp;gases&nbsp;in an area.&nbsp;</h3>
 </td>
 </tr>
 </tbody>
 </table>
-<p style="font-size: 16px;">For instance, a&nbsp;gas&nbsp;detector can sound an alarm to operators in the area where a gas leak is occurring, giving&nbsp;them the opportunity to leave.</p>
-<p style="font-size: 16px;"><a href="https://www.youtube.com/watch?v=BIf_mpnsZvY" target="_blank" rel="noopener">How to use gas sensor with Arduino</a>&nbsp;will support you in your projects!</p>
-<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/raw/master/gas%20sensor/gas%20sensor.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
+<p>For instance, a&nbsp;gas&nbsp;detector can sound an alarm to operators in the area where a gas leak is occurring, giving&nbsp;them the opportunity to leave.</p>
+<p><a href="https://www.youtube.com/watch?v=BIf_mpnsZvY" target="_blank" rel="noopener">How to use gas sensor with Arduino</a>&nbsp;will support you in your projects!</p>
+<p><a href="https://github.com/ecraft2learn/OER/raw/master/gas%20sensor/gas%20sensor.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
 </td>
 </tr>
 </tbody>
 </table>
 <p>&nbsp;</p>
-<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp; &nbsp;<a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license"><img style="border-width: 0;" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" alt="Licen&ccedil;a Creative Commons" width="128" height="45" /></a></p>
+<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp; &nbsp;<a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license"><img src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" alt="Licen&ccedil;a Creative Commons" width="128" height="45" /></a></p>
