--- a/gyroscope sensor/gyroscope.html
+++ b/gyroscope sensor/gyroscope.html
@@ -1,16 +1,16 @@
-<h1><span style="color: #000000;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
-<h1><span style="color: #000000;">Gyroscope</span></h1>
-<table style="height: 184px; width: 832px;">
+<h1><span><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
+<h1><span>Gyroscope</span></h1>
+<table>
 <tbody>
 <tr>
-<td style="width: 309.766px; text-align: center;">&nbsp; &nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/gyroscope%20sensor/Gyroscope.jpg?raw=true" alt="" width="217" height="218" /></td>
-<td style="width: 509.766px;">
-<h3 style="text-align: center;">&nbsp;</h3>
-<table style="height: 87px;" width="514">
+<td>&nbsp; &nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/gyroscope%20sensor/Gyroscope.jpg?raw=true" alt="" width="217" height="218" /></td>
+<td>
+<h3>&nbsp;</h3>
+<table width="514">
 <tbody>
 <tr>
-<td style="width: 507.266px;">
-<h3 style="text-align: center; border: 1px solid black;">A&nbsp;device used for measuring or maintaining orientation and angular velocity. It&nbsp; senses rotation over the 3 axes (XYZ).</h3>
+<td>
+<h3>A&nbsp;device used for measuring or maintaining orientation and angular velocity. It&nbsp; senses rotation over the 3 axes (XYZ).</h3>
 </td>
 </tr>
 </tbody>
@@ -19,6 +19,6 @@
 </tr>
 </tbody>
 </table>
-<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/raw/master/gyroscope%20sensor/Gyroscope.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
+<p><a href="https://github.com/ecraft2learn/OER/raw/master/gyroscope%20sensor/Gyroscope.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
 <p>&nbsp;</p>
-<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp; &nbsp;<a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license"><img style="border-width: 0;" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" alt="Licen&ccedil;a Creative Commons" width="128" height="45" /></a></p>
+<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp; &nbsp;<a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license"><img src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" alt="Licen&ccedil;a Creative Commons" width="128" height="45" /></a></p>
