--- a/jumper wires/jumper wire.html
+++ b/jumper wires/jumper wire.html
@@ -1,15 +1,15 @@
-<h1><span style="color: #000000;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
-<h1><span style="color: #000000;">Jumper wires</span></h1>
-<table style="height: 166px; width: 829px;">
+<h1><span><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
+<h1><span>Jumper wires</span></h1>
+<table>
 <tbody>
 <tr>
-<td style="width: 244.766px; text-align: center;">&nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/jumper%20wires/jumper%20wires.jpg?raw=true" alt="" width="306" height="110" /></td>
-<td style="width: 572.266px; text-align: justify;">
-<p style="font-size: 16px;">Electrical wire or group of them in a cable with a connector or pin at each end.</p>
-<table style="height: 77px;" width="501">
+<td>&nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/jumper%20wires/jumper%20wires.jpg?raw=true" alt="" width="306" height="110" /></td>
+<td>
+<p>Electrical wire or group of them in a cable with a connector or pin at each end.</p>
+<table width="501">
 <tbody>
 <tr>
-<td style="width: 493.516px; text-align: center; border: 1px solid black">
+<td>
 <h3>Normally used to interconnect the components of breadboard or test a circuit, internally or with other equipment or components, without soldering.</h3>
 </td>
 </tr>
@@ -20,6 +20,6 @@
 </tr>
 </tbody>
 </table>
-<p style="font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/raw/master/jumper%20wires/Jumper%20wires.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
+<p><a href="https://github.com/ecraft2learn/OER/raw/master/jumper%20wires/Jumper%20wires.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.</p>
 <p>&nbsp;</p>
 <p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp; &nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/Logos/Logo_CC2.jpg?raw=true" alt="" width="56" height="56" /></p>
