--- a/magnetic switch/magnetic switch.html
+++ b/magnetic switch/magnetic switch.html
@@ -1,12 +1,12 @@
-<h1><span style="color: #000000;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
+<h1><span><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
 <h1>Magnetic switch</h1>
-<table style="height: 132px; width: 828px;">
+<table>
 <tbody>
 <tr>
-<td style="width: 311.016px;">&nbsp; &nbsp; &nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/magnetic%20switch/Reed_Magnetic_Switch.png?raw=true" alt="" width="246" height="178" /></td>
-<td style="width: 504.766px;">
-<p style="text-align: justify; font-size: 16px;">An electrical switch that reacts when a magnetic field affects it. You can easily apply it&nbsp;in a door, a window or a drawer to detect if the door is open or closed.</p>
-<p style="text-align: justify; font-size: 16px;">How easy is to make an <a href="https://www.youtube.com/watch?v=oum4zNXg7zs">Arduino Reed Switch (magnet sensor) with LED</a>!</p>
+<td>&nbsp; &nbsp; &nbsp;<img src="https://github.com/ecraft2learn/OER/blob/master/magnetic%20switch/Reed_Magnetic_Switch.png?raw=true" alt="" width="246" height="178" /></td>
+<td>
+<p>An electrical switch that reacts when a magnetic field affects it. You can easily apply it&nbsp;in a door, a window or a drawer to detect if the door is open or closed.</p>
+<p>How easy is to make an <a href="https://www.youtube.com/watch?v=oum4zNXg7zs">Arduino Reed Switch (magnet sensor) with LED</a>!</p>
 </td>
 </tr>
 </tbody>
