--- a/raspberry Pi/Raspberry Pi.html
+++ b/raspberry Pi/Raspberry Pi.html
@@ -1,23 +1,23 @@
-<h1><span style="color: #000000;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
+<h1><span><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
 <h1>Raspberry Pi 3 (RPi3)</h1>
-<table style="height: 254px; width: 843px;">
-<tbody>
-<tr style="height: 210.133px;">
-<td style="width: 261.809px; height: 210.133px;"><img src="https://github.com/ecraft2learn/OER/blob/master/raspberry%20Pi/Raspberry%20Pi.jpg?raw=true" alt="" width="262" height="179" /></td>
-<td style="width: 569.191px; height: 210.133px;">
-<table style="width: 534.461px; height: 87px; border-style: solid; border-color: black;">
+<table>
 <tbody>
 <tr>
-<td style="width: 527.461px;">
-<h3 style="text-align: center;">Small single-board computer&nbsp;that helps you to learn programming and build your eCraft2Learn projects!&nbsp;</h3>
+<td><img src="https://github.com/ecraft2learn/OER/blob/master/raspberry%20Pi/Raspberry%20Pi.jpg?raw=true" alt="" width="262" height="179" /></td>
+<td>
+<table>
+<tbody>
+<tr>
+<td>
+<h3>Small single-board computer&nbsp;that helps you to learn programming and build your eCraft2Learn projects!&nbsp;</h3>
 </td>
 </tr>
 </tbody>
 </table>
-<p style="text-align: justify;"><span style="font-size: 16px;">To learn more about it, check out the following webpages:</span></p>
-<p><span style="color: #000000; font-size: 16px;">- There is a very large collection of sample projects&nbsp;<a href="%20https://www.raspberrypi.org/resources/" target="_blank" rel="noopener">here</a>.</span></p>
-<p><span style="color: #000000; font-size: 16px;">- To learn about Raspberry Pi platform and python programming, check out this <a href="https://www.coursera.org/learn/raspberry-pi-platform" target="_blank" rel="noopener">page</a>.</span></p>
-<p><span style="color: #000000; font-size: 16px;">- To learn how to interface with Raspberry Pi, click <a href="https://www.coursera.org/learn/raspberry-pi-interface" target="_blank" rel="noopener">here</a>.</span></p>
+<p><span>To learn more about it, check out the following webpages:</span></p>
+<p><span>- There is a very large collection of sample projects&nbsp;<a href="%20https://www.raspberrypi.org/resources/" target="_blank" rel="noopener">here</a>.</span></p>
+<p><span>- To learn about Raspberry Pi platform and python programming, check out this <a href="https://www.coursera.org/learn/raspberry-pi-platform" target="_blank" rel="noopener">page</a>.</span></p>
+<p><span>- To learn how to interface with Raspberry Pi, click <a href="https://www.coursera.org/learn/raspberry-pi-interface" target="_blank" rel="noopener">here</a>.</span></p>
 </td>
 </tr>
 </tbody>
