--- a/servo motor/servo motor.html
+++ b/servo motor/servo motor.html
@@ -1,16 +1,16 @@
-<h1><span style="color: #000000;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
-<h1 style="text-align: justify;">Servomotor</h1>
-<table style="height: 94px;" width="538">
+<h1><span><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
+<h1>Servomotor</h1>
+<table width="538">
 <tbody>
 <tr>
-<td style="width: 531.016px;">
-<h3 style="text-align: center; border: 1px solid black;">A type of DC motor that allows for control of angular position (180&ordm;). It can be used for tasks that require precise motion (e.g., a&nbsp;robot arm).</h3>
+<td>
+<h3>A type of DC motor that allows for control of angular position (180&ordm;). It can be used for tasks that require precise motion (e.g., a&nbsp;robot arm).</h3>
 </td>
 </tr>
 </tbody>
 </table>
-<p style="font-size: 16px; text-align: left;"><img src="https://github.com/ecraft2learn/OER/blob/master/servo%20motor/Servo%20motor.jpg?raw=true" alt="" width="284" height="189" /></p>
-<p style="font-size: 16px;">Check out <a href="https://www.youtube.com/watch?v=gviUtLsHDtg" target="_blank" rel="noopener">here</a> how it works!</p>
-<p style="text-align: justify; font-size: 16px;">&nbsp;</p>
-<p style="text-align: justify; font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/raw/master/servo%20motor/Servo%20motor.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.&nbsp;</p>
-<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp;<a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license"><img style="border-width: 0;" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" alt="Licen&ccedil;a Creative Commons" width="130" height="46" /></a><br /><br /></p>
+<p><img src="https://github.com/ecraft2learn/OER/blob/master/servo%20motor/Servo%20motor.jpg?raw=true" alt="" width="284" height="189" /></p>
+<p>Check out <a href="https://www.youtube.com/watch?v=gviUtLsHDtg" target="_blank" rel="noopener">here</a> how it works!</p>
+<p>&nbsp;</p>
+<p><a href="https://github.com/ecraft2learn/OER/raw/master/servo%20motor/Servo%20motor.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.&nbsp;</p>
+<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp;<a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license"><img src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" alt="Licen&ccedil;a Creative Commons" width="130" height="46" /></a><br /><br /></p>
