--- a/tilt sensor/tilt sensor.html
+++ b/tilt sensor/tilt sensor.html
@@ -1,26 +1,26 @@
-<h1><span style="color: #000000;"><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
-<h1 style="text-align: justify;">Tilt sensor</h1>
-<table style="height: 18px;" width="813">
+<h1><span><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_eCraft2Learn.png" alt="" width="215" height="41" /></span></h1>
+<h1>Tilt sensor</h1>
+<table width="813">
 <tbody>
 <tr>
-<td style="width: 806.016px;">
-<h3 style="text-align: center; border: 1px solid black;">Tilt sensors allow you to detect orientation or inclination in two axes.</h3>
+<td>
+<h3>Tilt sensors allow you to detect orientation or inclination in two axes.</h3>
 </td>
 </tr>
 </tbody>
 </table>
-<p style="font-size: 16px;"><img src="https://github.com/ecraft2learn/OER/blob/master/tilt%20sensor/Tilt%20sensor.jpg?raw=true" alt="" width="287" height="287" /></p>
-<p style="font-size: 16px;">&nbsp;</p>
-<table style="height: 111px;" width="830">
+<p><img src="https://github.com/ecraft2learn/OER/blob/master/tilt%20sensor/Tilt%20sensor.jpg?raw=true" alt="" width="287" height="287" /></p>
+<p>&nbsp;</p>
+<table width="830">
 <tbody>
 <tr>
-<td style="width: 823.516px;">
-<p style="text-align: justify; font-size: 16px;">They are&nbsp;usually made by a cylindrical&nbsp;cavity and a conductive free mass inside, such as rolling ball. One end of the cavity has&nbsp;two conductive elements (poles). When the sensor is oriented so that the end is&nbsp;downwards, the mass rolls onto the poles and act as a switch&nbsp;throw.</p>
-<p style="text-align: justify; font-size: 16px;">Check out this <a href="https://www.youtube.com/watch?v=W8dA6npX3pk" target="_blank" rel="noopener">tutorial</a> and see by yourself.</p>
+<td>
+<p>They are&nbsp;usually made by a cylindrical&nbsp;cavity and a conductive free mass inside, such as rolling ball. One end of the cavity has&nbsp;two conductive elements (poles). When the sensor is oriented so that the end is&nbsp;downwards, the mass rolls onto the poles and act as a switch&nbsp;throw.</p>
+<p>Check out this <a href="https://www.youtube.com/watch?v=W8dA6npX3pk" target="_blank" rel="noopener">tutorial</a> and see by yourself.</p>
 </td>
 </tr>
 </tbody>
 </table>
 <p>&nbsp;</p>
-<p style="text-align: justify; font-size: 16px;"><a href="https://github.com/ecraft2learn/OER/raw/master/tilt%20sensor/Tilt%20sensor.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.&nbsp;</p>
-<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp;<a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license"><img style="border-width: 0;" src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" alt="Licen&ccedil;a Creative Commons" width="130" height="46" /></a><br /><br /></p>
+<p><a href="https://github.com/ecraft2learn/OER/raw/master/tilt%20sensor/Tilt%20sensor.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.&nbsp;</p>
+<p><img src="https://raw.githubusercontent.com/ecraft2learn/OER/master/Logos/Logo_EU_white.png" alt="" width="330" height="66" />&nbsp;<a href="http://creativecommons.org/licenses/by-nc/4.0/" rel="license"><img src="https://i.creativecommons.org/l/by-nc/4.0/88x31.png" alt="Licen&ccedil;a Creative Commons" width="130" height="46" /></a><br /><br /></p>
