--- a/Cura Quick Start Guide/paging.html
+++ b/Cura Quick Start Guide/paging.html
@@ -20,3 +20,5 @@
 		</p>
 	</body>
 </html>
+
+<p><a href="https://github.com/ecraft2learn/OER/raw/master/Cura%20Quick%20Start%20Guide/Cura%20Quick%20Start%20Guide.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.&nbsp;</p>
