--- a/eCraft2Learn Ultimaker 3D Printing Resources/paging.html
+++ b/eCraft2Learn Ultimaker 3D Printing Resources/paging.html
@@ -15,3 +15,5 @@
 		</p>
 	</body>
 </html>
+
+<p><a href="https://github.com/ecraft2learn/OER/raw/master/eCraft2Learn%20Ultimaker%203D%20Printing%20Resources/eCraft2Learn%20Ultimaker%203D%20Printing%20Resources.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.&nbsp;</p>
