--- a/Getting Started Guide for Schools/paging.html
+++ b/Getting Started Guide for Schools/paging.html
@@ -70,3 +70,9 @@
 		</p>
 	</body>
 </html>
+
+<p><a href="https://github.com/ecraft2learn/OER/raw/master/Getting%20Started%20Guide%20for
+
+%20Schools/Getting%20Started%20Guide%20for%20Schools.pdf"><button type="button">Click 
+
+here</button></a>&nbsp;to download this file.&nbsp;</p>
