--- a/3D CAD Modelling in TinkerCAD/paging.html
+++ b/3D CAD Modelling in TinkerCAD/paging.html
@@ -20,3 +20,4 @@
 		</p>
 	</body>
 </html>
+<p><a href="https://github.com/ecraft2learn/OER/raw/master/3D%20CAD%20Modelling%20in%20TinkerCAD/3D%20CAD%20Modelling%20in%20TinkerCAD.pdf"><button type="button">Click here</button></a>&nbsp;to download this file.&nbsp;</p>
