--- a/Extruding a 3D model from a 2D Image/paging.html
+++ b/Extruding a 3D model from a 2D Image/paging.html
@@ -20,3 +20,10 @@
 		</p>
 	</body>
 </html>
+
+
+<p><a href="https://github.com/ecraft2learn/OER/raw/master/Extruding%20a%203D%20model%20from%20a
+
+%202D%20Image/Extruding%20a%203D%20model%20from%20a%202D%20Image.pdf"><button type="button">Click 
+
+here</button></a>&nbsp;to download this file.&nbsp;</p>
