--- a/Introduction to 3D Printing/paging.html
+++ b/Introduction to 3D Printing/paging.html
@@ -30,3 +30,9 @@
 		</p>
 	</body>
 </html>
+
+<p><a href="https://github.com/ecraft2learn/OER/raw/master/Introduction%20to%203D
+
+%20Printing/Introduction%20to%203D%20Printing.pdf"><button type="button">Click 
+
+here</button></a>&nbsp;to download this file.&nbsp;</p>
